[package]
name = "gaia-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gaia"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
gaia = { path = "gaia", features = ["base64", "tokio"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "fs", "io-std"] }
clap = { version = "4.4.5", features = ["derive"] }
main_error = "0.1.2"
prost = "0.12.1"