[package]
name = "gaia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
base64 = ["dep:base64"]

[dependencies]
aead = { version = "0.5.2", features = ["stream", "std"] }
aes-gcm-siv = { version = "0.11.1", features = ["alloc"] }
base64 = { version = "0.21.4", optional = true }