[package]
name = "gaia"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
base64 = ["dep:base64"]
tokio = ["dep:tokio"]

[dependencies]
aead = { version = "0.5.2", features = ["stream", "std"] }
aes-gcm-siv = { version = "0.11.1" }
base64 = { version = "0.22.0", optional = true }
tokio = { version = "1.36.0", optional = true, features = ["io-util"] }
crypto-common = "0.1.6"